Fixup layout issues around nightfall and masonry layouts. Introduce tags on expanded tile

--- a/widgets/nightfall/widget.scss
+++ b/widgets/nightfall/widget.scss
@@ -1,6 +1,6 @@
-@import url("../styles/tile-hover");
-@import url("../styles/social-icons");
-@import url("../styles/expanded-tile");
+@import "../styles/tile-hover";
+@import "../styles/social-icons";
+@import "../styles/expanded-tile";
 
 .ugc-tiles {
   display: flex;
@@ -8,9 +8,14 @@
   gap: 20px;
 }
 
+#tiles {
+  display: flex;
+  justify-content: center;
+}
+
 .ugc-tile {
-  flex: 0 0 calc(33.333% - 20px);
-  max-width: calc(33.333% - 20px);
+  flex: 0 0 calc(20% - 20px);
+  max-width: calc(20% - 20px);
   margin-bottom: 20px;
   min-height: 300px;
   cursor: pointer;
